# SPI.Api

./: CMakeLists.txt  CMakePresets.json  PiSubmarine.Build.CMake.cmake
mock/: CMakeLists.txt
mock/PiSubmarine/SPI/Api/: IDriverMock.h
public/PiSubmarine/Api/Internal/SPI/: DriverConcept.h  IDriver.h
public/PiSubmarine/SPI/Api/: DriverConcept.h  IDriver.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/PiSubmarine/SPI/Api/: IDriverTest.cpp
